[package]
name = "rusty_net_cracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
clap = { version = "3.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ssh2 = "0.9"
ftp = "3.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
chrono = "0.4"
itertools = "0.10"